<resources>
    <string name="app_name">Cardapio_Padoka</string>

    <!--Elementos comuns-->
    <string name="nomeUsuario">Nome </string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="voltar">Voltar</string>
    <string name="menos"> - </string>
    <string name="mais"> + </string>
    <string name="retornar">retornar</string>

    <!--Texto para Tela de login-->
    <string name="acesseContaTxt">Acesse sua conta</string>
    <string name="acessar">Acessar conta</string>
    <string name="crieContaTxt">Crie Conta</string>
    <string name="recuperarSenha">Recuperar Senha</string>

    <!--Texto para Tela de cadastro-->
    <string name="cadastroUsuario">Cadastro de Usuário</string>"
    <string name="cadastrarUsuario">Cadastrar Usuário</string>
    <string name="senhaConfirmar">Confirme a senha</string>
    <string name="voltarLogin">Voltar para tela de login</string>

    <!--Texto para Tela de recuperar Senha-->
    <string name="instrucoesRecuperarSenha">Informe o seu e-mail para recuperar a senha. Você receberá uma mensagem contendo as instruções para recuperação!</string>

    <!--Texto para Tela de item detalhe-->
    <string name="item_image_description"> item descrição </string>
    <string name="nomeItem"> nome do item</string>
    <string name="precoItem"> R$ 0.00</string>
    <string name="numberOne"> 1 </string>

    <!--Texto para Tela de cardapio-->
    <string name="cardapioPadaria">Cardápio da Padaria</string>
    <string name="bebidasQuentes">Bebidas Quentes</string>
    <string name="bebidasGeladas">Bebidas Geladas</string>
    <string name="lanches">Lanches</string>
    <string name="salgados">Salgados</string>
    <string name="doces">Doces</string>
    <string name="logout">Logout </string>


    <!--Texto para Tela de Carrinho-->
    <string name="carrinho">Carrinho</string>
    <string name="precoTotal"> Total: R$ 0,00</string>
</resources>